--- a/projeto/cadastro.html
+++ b/projeto/cadastro.html
@@ -21,16 +21,16 @@
         <label for="cpf">CPF: </label>
         <input type="text" id="cpf"></br>
         <label for="celular">Telefone Celular: </label>
-        <input type="number" id="celular" placeholder="(+55)XX-XXXXXXXX"></br>
+        <input type="tel" id="celular" placeholder="(+55)XX-XXXXXXXX"></br>
         <label for="telefone">Telefone Fixo: </label>
-        <input type="number" id="telefone" placeholder="(+55)XX-XXXXXXXX">
-    </form>
+        <input type="tel" id="telefone" placeholder="(+55)XX-XXXXXXXX">
+
     <h3>Cadastro de Login</h3>
     <form name="form" action="#" method="post">
         <label>Digite o usuário: </label>
-        <input type="text" id="usuario"></br>
+        <input type="text" id="usuario" minlength="6" maxlength="6"></br>
         <label>Senha: </label>
-        <input type="password" id="senha"></br>
+        <input type="password" id="senha" minlength="8" maxlength="14"></br>
         <label>Confirma senha: </label>
         <input type="password" id="senha"></br>
         <input type="submit" class="button button1" value="Confirmar">
