--- a/telecall-main 30.05.22/projeto/cadastro.html
+++ b/telecall-main 30.05.22/projeto/cadastro.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Cadastro</title>
-        <link href="estilos/telecall.css" rel="stylesheet" type="text/css">
+        <link href="estilos/telecall.css" rel="stylesheet" type="text/css"> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
     </head>
     <body>
 <div class="container">
@@ -23,10 +26,12 @@
         <input type="text" id="mae"></br>
         <label for="cpf">CPF: </label>
         <input type="text" id="cpf"></br>
-        <label for="celular">Telefone Celular: </label>
-        <input type="tel" id="celular" ></br>
-        <label for="telefone">Telefone Fixo: </label>
-        <input type="tel" id="telefone" ></br>
+        <label for="endereco">Endereço Completo:</label>
+        <input type="text" id="endereco"> </br>
+        <label for="cel">Telefone Celular: </label>
+        <input type="tel" id="cel" ></br>
+        <label for="fixo">Telefone Fixo: </label>
+        <input type="tel" id="fixo" ></br>
         <label>Senha: </label>
         <input type="password" id="senha" minlength="8" maxlength="14"></br>
         <label>Confirma senha: </label>
