--- a/telecall-main 13.06.22/projeto/paginasmsprogamavel.html
+++ b/telecall-main 13.06.22/projeto/paginasmsprogamavel.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="estilos/todos.css" rel="stylesheet" type="text/css">
+        <link href="estilos/paginas.css" rel="stylesheet" type="text/css">
+       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
         <title>SMS Programável</title>
     </head>
     <body>
@@ -47,12 +53,12 @@
         <div class="container">
             <h1>Quem usa?</h1>
             <p>São muitos os caso de uso, mas veja alguns exemploos:</p>
-            <img id="img2" src="img/imagem2.png" width="850">
+           <!--<img id="img2" src="img/imagem2.png" width="850">-->
         </div>
         <div class="container">
             <h1>Jornada do Cliente</h1>
             <p>Ofereça uma melhor experiência ao cliente acompanhando a sua jornada de compra.</p>
-            <img id="img1" src="img/imagem1.png" width="850">
+           <!--<img id="img1" src="img/imagem1.png" width="850">-->
         </div>
         <div class="container">
             <h1>Benefícios</h1>
