--- a/telecall-main 13.06.22/projeto/login.html
+++ b/telecall-main 13.06.22/projeto/login.html
@@ -18,18 +18,18 @@
         <section>    
             <form action="#" method="post" onsubmit="return validarDados();">
 
-                <legend><b>SEJA BEM VINDO</b></legend>
+                <legend><b>Seja bem vindo</b></legend>
                 <p></p>
 
                 <fieldset>
                     <legend>Área de Acesso</legend>
 
-                        <label for="fname">LOGIN</label>
-                            <input class="alinhamento-direita" id="fname" type="text" size="10" maxlength="8" placeholder="Digite seu login"></br>
+                        <label for="fname">Login</label>
+                            <input class="alinhamento-direita" id="fname" type="text" size="10" maxlength="8" placeholder="Digite o login"></br>
                         <P></P>
 
-                        <label for="fsenha">SENHA</label>
-                            <input class="alinhamento-direita" id="fsenha" type="password" size="10" maxlength="8" id="senha" placeholder="Digite sua senha"></br>    
+                        <label for="fsenha">Senha</label>
+                            <input class="alinhamento-direita" id="fsenha" type="password" size="10" maxlength="8" id="senha" placeholder="Digite a senha"></br>    
                         <p></p>
 
                     <div id="enter">
@@ -38,10 +38,11 @@
                 </fieldset>
             </form>
         </section>
-                <p><a href="#"><b>NOVO CADASTRO</b></a></p>
+                <p><a href="#"><b>Novo cadastro</b></a></p>
                 <p></p>
-                <p><a href="#"><b>ESQUECI MINHA SENHA</b></a></p>
+                <p><a href="#"><b>Esqueci minha senha</b></a></p>
         </div>
+        <p></p>
         <p></p>
         <p></p>
         <p></p>
