--- a/telecall-main 13.06.22/projeto/mascara.html
+++ b/telecall-main 13.06.22/projeto/mascara.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="estilos/todos.css" rel="stylesheet" type="text/css">
         <title>Número Máscara</title>
     </head>
     <body>
-        <div>
+        <section>
             <h1>Número Máscara</h1>
             <h3>Proteja identidades profissionais</h3>
             <p>Garanta aos seus clientes a capacidade de fazer chamadas e enviar mensagens sem expor seus números de telefone pessoal.</p>
@@ -16,51 +15,47 @@
                 <li>Permite que empresas façam negócios usando menos números de telefone.</li>
                 <li>Oferece uma experiência mais segura e profissional.</li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h3>Como Funciona</h3>
             <article>
-                <section>
-                    <p class="parag1">Usuário faz uma chamada através de um aplicativo.</p>
-                    <img src="#">
+                <p class="parag1">Usuário faz uma chamada através de um aplicativo.</p>
+                <img src="#">
                 <p class="parag2">Ex: Liga para o entregador ou motorista de táxi ou entra em contato com a central de atendimento.</p>
-                </section>
-                <section>
-                    <p class="parag1">Plataforma mascara o número original.</p>
-                    <img src="#">
-                    <p class="parag2">A plataforma recebe a chamada e mascara o número antes de conectar com o destinatário.</p>
-                </section>
-                <section>
-                    <p class="parag1">Ambas as partes são conectadas.</p>
-                    <img src="#">
-                    <p class="parag2">A plataforma conecta ambas as partes mantendo a privacidade dos dois.</p>
-                </section>
             </article>
-        </div>
-        <div>
+            <article>
+                <p class="parag1">Plataforma mascara o número original.</p>
+                <img src="#">
+                <p class="parag2">A plataforma recebe a chamada e mascara o número antes de conectar com o destinatário.</p>
+            </article>
+            <article>
+                <p class="parag1">Ambas as partes são conectadas.</p>
+                <img src="#">
+                <p class="parag2">A plataforma conecta ambas as partes mantendo a privacidade dos dois.</p>
+            </article>
+        </section>
+        <section>
             <h3>Quem Usa?</h3>
             <article>
-                <section>
-                    <img src="#">
-                    <p class="parag1">Apps de Transporte</p>
-                    <p>Permite que o motorista e passageiro se comuniquem sem compartilhar seus dados pessoais.</p>
-                </section>
-                <section>
-                    <img src="#">
-                    <p class="parag1">Apps de Relacionamento</p>
-                    <p>Permite uma maneira privada e segura para usuários interagirem sem expor contatos pessoais.</p>
-                </section>
-                <section>
-                 <img src="#">
-                    <p class="parag1">E-commerce</p>
-                    <p>Permite que clientes entrem em contato através do aplicativo. Podem também integrar chamadas internacionais.</p>
-                </section>
-                <section>
-                    <img src="#">
-                    <p class="parag1">Entregas e Logística</p>
-                    <p>Mantenha seu cliente informado sobre entregas e serviços, tire dúvidas, etc.</p>
-                </section>
+                <img src="#">
+                <p class="parag1">Apps de Transporte</p>
+                <p>Permite que o motorista e passageiro se comuniquem sem compartilhar seus dados pessoais.</p>
             </article>
-        </div>
+            <article>
+                <img src="#">
+                <p class="parag1">Apps de Relacionamento</p>
+                <p>Permite uma maneira privada e segura para usuários interagirem sem expor contatos pessoais.</p>
+            </article>
+            <article>
+                <img src="#">
+                <p class="parag1">E-commerce</p>
+                <p>Permite que clientes entrem em contato através do aplicativo. Podem também integrar chamadas internacionais.</p>
+            </article>
+            <article>
+                <img src="#">
+                <p class="parag1">Entregas e Logística</p>
+                <p>Mantenha seu cliente informado sobre entregas e serviços, tire dúvidas, etc.</p>
+            </article>
+        </section>
     </body>
 </html>
