--- a/telecall-main 19.06.22/projeto/7-smsprogamavel.html
+++ b/telecall-main 19.06.22/projeto/7-smsprogamavel.html
@@ -4,8 +4,38 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SMS Programável</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-dark" style="background-image: linear-gradient(to right,#5b7cba,#7f95c8,#9faed6,#bfc9e3,#dfe3f1, #fff )">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nossoMenu" 
+                     aria-controls="nossoMenu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a href="#"><img src="img/modavologo2.png" width="150px"></a>
+                <div class="collapse navbar-collapse" id="nossoMenu">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="4-pagina 2fa.html">2FA</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="5- numero mascara.html">Máscara</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="6-google ver calls.html">Google Calls</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="7-smsprogamavel.html">SMS Programável</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+    </header>
         <div class="container">
             <h1>O que é?</h1>
             <p>Conecte-se com os seu clientes.</p>
@@ -67,5 +97,9 @@
                 <li>Acompanhamento de métricas e relatórios.</li>
             </ul>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script></body></html>
+ 
     </body>
 </html>
